# FirstSoftware

./: .gitignore  readme.txt
LCC_Code/: CMakeLists.txt
LCC_Code/LCCAdaptive/: hadaptive.cpp  hadaptive.h
LCC_Code/LCCAnalysis/: CMakeLists.txt  tarungek.cpp  tarungek.h  ttimeanalysis.cpp  ttimeanalysis.h
LCC_Code/LCCCommon/: CreateGeoMesh.h  IdMaterialsToGIDFiles.cpp  IdMaterialsToGIDFiles.h  Refinements.cpp  Refinements.h  commonJC.cpp  commonJC.h  myheader.cpp
LCC_Code/LCCEstimator/: EEGradientReconstruction.cpp  EEGradientReconstruction.h  ErrorEstimator.cpp  ErrorEstimator.h  ErrorEstimatorAlmostHaarWavelets.cpp  ErrorEstimatorAlmostHaarWavelets.h
LCC_Code/LCCMaterials/: LCC_poissontime.cpp  conelaw.cpp  conelaw.h  conelawSI.cpp  conelawSI.h  conelawimplicit.cpp  conelawimplicit.h  conslaw.cpp  conslaw.h  conslawSI.cpp  conslawSI.h  euler.cpp  euler.h  euler4c.cpp  euler4c.h  eulerbi.cpp  eulerbi.h  linlaw.cpp  linlaw.h  linlawbi.cpp  linlawbi.h
LCC_Code/LCC_Projects/: CMakeLists.txt
LCC_Code/LCC_Projects/Poisson_H1_GD_HdivH1/: CMakeLists.txt  LaplacianSenoSeno.cpp  LaplacianSenoSeno.h  main.cpp
LCC_SimulatorIO/InputData/: userdata.txt  userdata_other.txt  userdata_other2.txt
LCC_SimulatorIO/Old/InputData/: Quadrado_Quadrilaterals_GID.dump  userdata.txt
LCC_SimulatorIO/Old/SimulationResults/R2021_02_22_22_00_45/: InfoRun_Errors.txt  Model0_2D_MESH_E5H1_p2_GD.scal_vec.0.vtk  Model0_2D_MESH_E5H1_p2_GD.scal_vec.1.vtk  Model0_2D_MESH_E5H1_p2_GD.scal_vec.2.vtk  Model0_2D_MESH_E5H1_p2_GD.scal_vec.3.vtk  Model0_2D_MESH_E5H1_p2_GD.scal_vec.4.vtk  Model0_2D_MESH_E5H1_p2_GD.scal_vec.5.vtk
LCC_SimulatorIO/Old/SimulationResults/R2021_02_22_22_05_22/: InfoRun_Errors.txt
LCC_SimulatorIO/Old/SimulationResults/R2021_02_23_17_14_27/: InfoRun_Errors.txt
LCC_SimulatorIO/Old/SimulationResults/R2021_02_23_17_21_48/: InfoRun_Errors.txt  Model0_2D_MESH_E5H1_p2_H1.scal_vec.0.vtk
LCC_SimulatorIO/Old/SimulationResults/R2021_02_23_17_23_56/: InfoRun_Errors.txt  Model0_2D_MESH_E5H3_p2_H1.scal_vec.0.vtk
LCC_SimulatorIO/Old/SimulationResults/R2021_02_23_17_30_32/: InfoRun_Errors.txt  Model0_2D_MESH_E5H2_p2_H1.scal_vec.0.vtk
LCC_SimulatorIO/Old/SimulationResults/R2021_02_23_17_51_12/: InfoRun_Errors.txt  Model0_2D_MESH_E5H1_p3_H1.scal_vec.0.vtk
LCC_SimulatorIO/Old/SimulationResults/R2021_02_23_17_53_33/: InfoRun_Errors.txt  Model0_2D_MESH_E5H1_p5_H1.scal_vec.0.vtk
LCC_SimulatorIO/Old/SimulationResults/R2021_02_23_17_58_35/: InfoRun_Errors.txt  Model0_2D_MESH_E5H1_p4_GD.scal_vec.0.vtk
